--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "seed": "node src/seed.js",
+    "seed": "node src/runseed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
